
using Microsoft.AspNetCore.Identity;
namespace FinanceTracker.DataAccess
{
    public class SignInManager
    {
    }
}
